syntax = "proto3";

import "google/protobuf/empty.proto";

message SlaveConfig {
      // @inject_tag: storm:"index"
    string host = 1;
    int32 port = 2;
    string token = 3;
}

message SlaveRegisterStatus {
    string message = 1;
}

service Register {
    rpc RegisterNewSlave(SlaveConfig) returns (SlaveRegisterStatus) {}
}